--- a/roles/dropbox/tasks/main.yml
+++ b/roles/dropbox/tasks/main.yml
@@ -11,14 +11,14 @@
     src: "{{ pkg_file.dest }}"
     dest: "~"
 
-- name: Download python script
-  become: false
-  get_url:
-    url: https://www.dropbox.com/download?dl=packages/dropbox.py
-    dest: "~"
+#- name: Download python script
+#  become: false
+#  get_url:
+#    url: https://www.dropbox.com/download?dl=packages/dropbox.py
+#    dest: "~"
 
-- name: Start Ubuntu dropbox package
-  become: false
-  command: "~/.dropbox-dist/dropboxd >/dev/null 2>&1 &"
-  args:
-    chdir: ~
+#- name: Start Ubuntu dropbox package
+#  become: false
+#  command: "~/.dropbox-dist/dropboxd >/dev/null 2>&1 &"
+#  args:
+#    chdir: ~
